Start input handling implement

--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -1,12 +1,14 @@
 FROM ubuntu:latest
 
-# Install Python
+# Install Python and strace
 RUN apt update
-RUN apt install python3 -y
+RUN apt install python3 -y lsof
 
 # Create a non-root user for safety
 RUN useradd -m sandboxuser
-USER sandboxuser
 
-# Working directory inside the container
+# Set PATH explicitly (adds /usr/sbin where strace lives)
+# ENV PATH="/usr/sbin:/usr/bin:/bin:$PATH"
+
+USER sandboxuser
 WORKDIR /home/sandboxuser/app
